cambio en tarjeta

--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -65,8 +65,12 @@
         <p class="card-text">Conoce a Julihue, ilustradora y diseñadora. Ayudala a alcanzar sus objetivos!.</p>
         <p class="card-text">
           <!-- SnapWidget -->
-<script src="https://snapwidget.com/js/snapwidget.js"></script>
-<iframe src="https://snapwidget.com/embed/952056" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
+<div data-mc-src="087c9cc9-37c1-4eec-ae8d-1234b663535d#instagram"></div>
+        
+<script 
+  src="https://cdn2.woxo.tech/a.js#60fcf36db175930015969690" 
+  async data-usrc>
+</script>
 </p>
 <a href="https://www.instagram.com/julihues/"target="_blank" class="btn btn-primary botoncentrado">Instagram</a>
       </div>
